<resources>
    <string name="app_name">AutoTrack</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to</string>
    <string name="register_button_label">Register</string>
    <string name="start_trip_button_label">Start A New Trip</string>
    <string name="start_log_button_label">Start Logging</string>
    <string name="stop_log_button_label">Stop Logging</string>
    <string name="continue_log_button_label">Continue Logging</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_driver_device">this device and driver combination</string>
    <string name="driver_name_label">Driver Name</string>
    <string name="driver_phone_label">Driver Phone</string>
    <string name="auto_licence_label">Licence Number</string>
    <string name="title_activity_starttrip">StarttripActivity</string>
    <string name="title_activity_strat_trip">StratTripActivity</string>
    <string name="skip_button_label">Skip!</string>
    <string name="title_activity_location_log">MiddleMenuActivity</string>
    <string name="colon_separator"> : </string>
    <string name="date_registered_label">Date Registered</string>

    <string name="PREFERENCE_FILE">MyPrefsFile</string>
    <string name="title_activity_log_location">LogLocation</string>
</resources>
