<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.data2sense.gramasamy.autotrack.LocationLogActivity">

    <Button
        android:id="@+id/start_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_log_button_label" />

    <Button
        android:id="@+id/continue_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_log_button"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/continue_log_button_label" />

    <Button
        android:id="@+id/stop_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/continue_log_button"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/stop_log_button_label" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_button_label"
            android:onClick="displayRegistrationForm"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="displayStartTripScreen"
            android:text="@string/start_trip_button_label" />

    </LinearLayout>


</RelativeLayout>
