<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.data2sense.gramasamy.autotrack.StartTripActivity">

    <!-- Display the registration details as table -->
    <LinearLayout
        android:id="@+id/registration_info_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- One row per data -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_HWwrap_content"
                android:text="@string/auto_licence_label" />

            <TextView
                style="@style/layout_HWwrap_content"
                android:text="@string/colon_separator" />

            <TextView
                android:id="@+id/auto_licence_display"
                style="@style/layout_HWwrap_content" />

        </LinearLayout>
        <!-- One row per data -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_HWwrap_content"
                android:text="@string/driver_name_label" />

            <TextView
                style="@style/layout_HWwrap_content"
                android:text="@string/colon_separator" />

            <TextView
                android:id="@+id/driver_name_display"
                style="@style/layout_HWwrap_content" />
        </LinearLayout>
        <!-- One row per data -->
        <LinearLayout
            style="@style/layout_HWwrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/layout_HWwrap_content"
                android:text="@string/driver_phone_label" />

            <TextView
                style="@style/layout_HWwrap_content"
                android:text="@string/colon_separator" />

            <TextView
                android:id="@+id/driver_phone_display"
                style="@style/layout_HWwrap_content" />
        </LinearLayout>

    </LinearLayout>

    <!-- Display start activity /skip buttons -->
    <!-- start activity button -->
    <Button
        android:id="@+id/start_trip_button"
        style="@style/CenterHoriNoCapButton"
        android:layout_below="@id/registration_info_table"
        android:text="@string/start_trip_button_label" />

    <!-- skip button -->
    <Button
        style="@style/CenterHoriNoCapButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="displayLocationLogScreen"
        android:text="@string/skip_button_label" />

</RelativeLayout>
