<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_message"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/welcome_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_word"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/welcome_appname"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/register_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:onClick="displayRegistrationForm"
            android:text="@string/register_button_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/start_trip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_button_view"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:onClick="displayStartTripScreen"
            android:text="@string/start_trip_button_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/stop_trip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_trip_button"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:onClick="displayLocationLogScreen"
            android:text="@string/start_log_button_label"
            android:textAllCaps="false" />

    </RelativeLayout>

</RelativeLayout>