<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.data2sense.gramasamy.autotrack.RegisterActivity">

    <TextView
        android:id="@+id/register_text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register_button_label"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/register_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_text_view1"
        android:layout_centerHorizontal="true"
        android:text="@string/register_driver_device"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/registration_form_layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/register_text_view2"

        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_licence_label" />

        <EditText
            android:id="@+id/auto_licence_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration_form_layout_2"
        style="@style/layout_AllAlignParentTrueHWwrpcnt"
        android:layout_below="@id/registration_form_layout_1"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_name_label" />

        <EditText
            android:id="@+id/driver_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration_form_layout_3"
        style="@style/layout_AllAlignParentTrueHWwrpcnt"
        android:layout_below="@id/registration_form_layout_2"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_phone_label" />

        <EditText
            android:id="@+id/driver_phone_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration_form_layout_4"
        style="@style/layout_HWwrap_content"
        android:layout_below="@id/registration_form_layout_3">

        <TextView
            style="@style/layout_HWwrap_content"
            android:text="@string/date_registered_label" />

        <TextView
            android:id="@+id/registration_date_display_text_view"
            style="@style/layout_HWwrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_form_layout_4"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lat:" />

        <TextView
            android:id="@+id/register_lattitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lon:" />

        <TextView
            android:id="@+id/register_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        style="@style/CenterHoriNoCapButton"
        android:layout_below="@id/registration_form_layout_4"
        android:onClick="registerDriverAndDevice"
        android:text="@string/register_button_label" />

</RelativeLayout>
